[package]
name = "pose-backend"
version = "0.1.0"
authors = ["capybaba"]
autobins = false
edition = "2018"

[dependencies]
clap = "2.33.3"
nom = "6.0.1"
tokio = { version = "1.0.1", features = ["full"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.2"
consistenttime = "0.2.0"
pbkdf2 = "0.6.0"
rand = "0.7.3"
anyhow = "1.0.37"
sqlx = { version = "0.3.5", default-features=false, features = ["sqlite", "runtime-tokio", "macros"] }
libsqlite3-sys = { version = "*", features = ["bundled"] }

[profile.release]
lto = true
codegen-units = 1
# panic = 'abort'

[[bin]]
name = "pose"
path = "src/main.rs"
